# HackRare2026

./: .env.example  .gitignore  README.md  app.py  hpo_functions.py  pyproject.toml  ws0-shared-contracts.md  ws1-data-tools.md  ws2-agent-llm.md  ws3-chainlit-ui.md  ws4-evaluation.md
.chainlit/: config.toml
agent/: llm_client.py  pipeline.py  state.py
agent/prompts/: excluded.txt  final_reasoning.txt  timing.txt
chainlit_utils/: __init__.py  formatters.py
core/: config.py  data_loader.py  database.py  models.py  session_manager.py
data/raw/: Phenotypic-profiles-Rare-Disease-Hackathon2025.txt
eval/: gold_cases.py  robustness.py  score.py
public/: custom.css  custom.js
scripts/: ingest_diseases.py  ingest_hpo.py  ingest_patients.py  test_integration.py
tests/: test_ws2.py
tools/: disease_match.py  excluded_extract.py  hpo_lookup.py  orphanet_fetch.py  reanalysis.py  red_flag.py  timing_extract.py
