
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diagnostic-copilot"
version = "0.1.0"
description = "AI-powered rare disease diagnostic copilot"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.30",
    "chainlit>=1.3",
    "pronto>=2.5",
    "pandas>=2.1",
    "pymongo>=4.6",
    "redis>=5.0",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "rapidfuzz>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
include = ["core*", "tools*", "agent*", "eval*", "scripts*", "chainlit_utils*"]